--- a/htmls/getTest.html
+++ b/htmls/getTest.html
@@ -5,7 +5,7 @@
         <script>
             function send(){
                 var xhr = new XMLHttpRequest();
-                var url = "/regist?foo=なあ";
+                var url = "/regist?fooo=hogehogee";
                 xhr.open("GET",url);
                 xhr.send();
             }
